# gfnff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: build-and-test.yml  wheels.yml
app/: CMakeLists.txt  main.F90  main.f90  meson.build  timer.f90  xyzreader.f90
config/: CMakeLists.txt  config.cmake.in  meson.build
config/modules/: Findtest-drive.cmake  gfnff-utils.cmake
include/: gfnff_interface_c.h
python/: DESIGN.md
python/gfnff/: __init__.py  _lib.py  ase_calculator.py  calculator.py  cli.py
python/tests/: conftest.py  test_ase.py  test_lib.py
recipe/: meta.yaml
src/: .gitignore  CMakeLists.txt  C_interface.f90  dftd3param.f90  dftd4param.f90  gfnff_alpb.F90  gfnff_cn.f90  gfnff_data_types.f90  gfnff_engrad.F90  gfnff_engrad.f90  gfnff_fraghess.f90  gfnff_gdisp0.f90  gfnff_helpers.f90  gfnff_ini.f90  gfnff_ini2.f90  gfnff_interface.f90  gfnff_latticepoint.f90  gfnff_math_wrapper.f90  gfnff_neighbor.f90  gfnff_param.f90  gfnff_qm.f90  gfnff_rab.f90  gfnff_restart.f90  gfnff_setup.f90  gfnff_timer_mod.f90  gfnff_wsc.f90  math_wrapper.f90  meson.build
src/gbsa/: CMakeLists.txt  bisectsearch.f90  born.f90  cm5.f90  gbsa.f90  input.F90  kernel.f90  lebedev.f90  meson.build  model.f90  sasa.f90  solvation_math_wrapper.f90  state.f90  type.f90  util.F90  vdwrad.f90
test/: CMakeLists.txt  coffeine.f90  main.c  main.cpp  main.f90  meson.build  sio2.f90  supermol.f90  test_gfnff.F90  test_pbc_ini.f90  test_pbc_sp.f90  timer.f90
testprog/: CMakeLists.txt  main.f90  meson.build  testmol.f90
