
if get_option('with_gbsa')
subdir('gbsa')
endif

srcs += files(
   'gfnff_math_wrapper.f90',
   'gfnff_data_types.f90',
   'gfnff_param.f90',
   'dftd3param.f90',
   'dftd4param.f90',
   'gfnff_helpers.f90',
   'gfnff_fraghess.f90',
   'gfnff_rab.f90',
   'gfnff_cn.f90',
   'gfnff_gdisp0.f90',
   'gfnff_qm.f90',
   'gfnff_ini2.f90',
   'gfnff_ini.f90',
   'gfnff_alpb.F90',
   'gfnff_engrad.f90',
   'gfnff_restart.f90',
   'gfnff_setup.f90',
   'gfnff_interface.f90',
)

prog += files(
)
