# This file is part of gfnff.
# SPDX-Identifier: LGPL-3.0-or-later

subdir('gbsa')

srcs += files(
  'gfnff_math_wrapper.f90',
  'gfnff_data_types.f90',
  'gfnff_neighbor.f90',
  'gfnff_param.f90',
  'dftd3param.f90',
  'dftd4param.f90',
  'gfnff_helpers.f90',
  'gfnff_fraghess.f90',
  'gfnff_rab.f90',
  'gfnff_cn.f90',
  'gfnff_gdisp0.f90',
  'gfnff_qm.f90',
  'gfnff_wsc.f90',
  'gfnff_timer_mod.f90',
  'gfnff_ini2.f90',
  'gfnff_ini.f90',
  'gfnff_latticepoint.f90',
  'gfnff_alpb.F90',
  'gfnff_engrad.F90',
  'gfnff_restart.f90',
  'gfnff_setup.f90',
  'gfnff_interface.f90',
  'C_interface.f90',  # C API — was present in CMakeLists but missing from old meson.build
)
